--- a/Android/Ryan/app/build.gradle
+++ b/Android/Ryan/app/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.application'
+//apply plugin: 'com.android.databinding'
 
 android {
     compileSdkVersion 23
@@ -24,6 +25,10 @@ android {
         }
     }
 
+    dexOptions {
+        incremental true
+    }
+
     productFlavors {
         dev {
             minSdkVersion 21
@@ -36,7 +41,6 @@ android {
 //        umeng {}
 //        baidu {}
 //        c360 {}
-//
     }
 }
 
